[gd_scene load_steps=8 format=3 uid="uid://c001igent2233"]

[ext_resource type="Script" uid="uid://dlxeq3dkec8o5" path="res://Scripts/fire.gd" id="1_yr3ur"]
[ext_resource type="Texture2D" uid="uid://dr2buxstrc882" path="res://Assets/Enemies/fire.png" id="2_idb68"]
[ext_resource type="AudioStream" uid="uid://e6k1kerygjae" path="res://MusicAndSounds/SFX/fire.ogg" id="3_idb68"]

[sub_resource type="Animation" id="Animation_8uni6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s2jnl"]
resource_name = "idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hrujk"]
_data = {
&"RESET": SubResource("Animation_8uni6"),
&"idle": SubResource("Animation_s2jnl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_idb68"]
radius = 82.0

[node name="fire" type="Node2D"]
script = ExtResource("1_yr3ur")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("2_idb68")
hframes = 6

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-5, 3, -2, -2, 3, -2, 5, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hrujk")
}

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_idb68")

[node name="Area2D2" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_idb68")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
